log
mi.,  3 de may. de 2023  0:02:14: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f1d3b8d
mi.,  3 de may. de 2023  0:02:47: 
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f206fc0
mi.,  3 de may. de 2023  0:04:18: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8d9fb73
mi.,  3 de may. de 2023  0:13:39: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
3d4750a
mi.,  3 de may. de 2023 15:39:00: 
 sudoku.c | 73 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 72 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:70:7: error: redefinition of 'numerosValidos'
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
sudoku.c:48:7: note: previous definition of 'numerosValidos' was here
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
sudoku.c:90:7: error: redefinition of 'numerosValidos'
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
sudoku.c:70:7: note: previous definition of 'numerosValidos' was here
   int numerosValidos[9] = {0,0,0,0,0,0,0,0,0};
       ^~~~~~~~~~~~~~
Compilation failed
9ed069f
mi.,  3 de may. de 2023 15:39:32: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|4
total_score: 15/70
8d77460
mi.,  3 de may. de 2023 15:42:10: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|4
total_score: 15/70
b28481b
